Resolve GetHelp Option issue on IE

--- a/src/components/GetHelpOpts/GetHelpOpts.css
+++ b/src/components/GetHelpOpts/GetHelpOpts.css
@@ -1,9 +1,11 @@
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     .bigHolder {
-        height: 100%;
+        height: 50%;
         width: 100%;
     }
+
+
 }
 
 
@@ -60,7 +62,7 @@
     }
 
      .options {
-       /* height: 100%;*/
+        height: 100%;
         width: 100%;
         display: flex;
         display: -webkit-flex;
